# WatchCore-RT

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TECHNICAL_REPORT.md  USER_GUIDE.md  build.bat  setup.bat  setup.ps1  start-all.bat
.github/workflows/: ci.yml
include/: FreeRTOSConfig.h  benchmarks.h  command_processor.h  config.h  data_logger.h  diagnostics.h  emergency_tasks.h  event_manager.h  fault_injection.h  flight_recorder.h  hires_clock.h  ipc_manager.h  logging.h  monitoring_tasks.h  power_manager.h  power_model.h  safety_manager.h  system_state.h  telemetry_server.h  watchdog.h
src/: main.c
src/benchmarks/: benchmarks.c
src/command_processor/: command_processor.c
src/data_logger/: data_logger.c
src/diagnostics/: diagnostics.c
src/emergency/: emergency_tasks.c
src/event_manager/: event_manager.c
src/fault_injection/: fault_injection.c
src/flight_recorder/: flight_recorder.c
src/hires_clock/: hires_clock.c
src/ipc/: ipc_manager.c
src/logging/: logging.c
src/monitoring/: monitoring_tasks.c
src/power_manager/: power_manager.c
src/power_model/: power_model.c
src/safety_manager/: safety_manager.c
src/state_machine/: system_state.c
src/telemetry_server/: telemetry_server.c
src/watchdog/: watchdog.c
tests/: run_tests.bat  test_runtime.c
web/backend/: .gitignore  package-lock.json  package.json  tsconfig.json
web/backend/src/: anomaly.ts  config.ts  correlation.ts  db.ts  index.ts  ingest.ts  narrate.ts  recovery.ts  relay.ts  report.ts  swarm.ts  types.ts
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: AlertRibbon.tsx  BootOverlay.tsx  Layout.tsx  OrbitMap.tsx  Radar.tsx  SchedulerLanes.tsx  Speedometer.tsx  Toasts.tsx  ui.tsx
web/frontend/src/lib/: api.ts  plain.ts  store.ts  tinystore.ts  types.ts  utils.ts
web/frontend/src/pages/: Analytics.tsx  Fleet.tsx  Monitor.tsx  Simulate.tsx
